tests/golden/type_errors/nullable_enum_pattern_guarded_nil.cd
enum Option { Some(number), None }
let value: Option? = nil;
print match value {
  nil if true => "nil",
  Option.Some(_) => "some",
  Option.None => "none",
};
